--- a/ONTrack2.conf
+++ b/ONTrack2.conf
@@ -48,7 +48,7 @@ params {
     primers_length = 25
     
     //medaka model
-    medaka_model = "r941_min_sup_g507"
+    medaka_model = "r1041_e82_400bps_sup_v5.0.0"
 
     //Blast-indexed database for Blasting consensus sequences
     blast_db = "/path/to/NCBI_nt_db/nt"
